Update for newer JDKs