@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.red5</groupId>
         <artifactId>red5-parent</artifactId>
-        <version>1.3.33</version>
+        <version>1.3.34</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>red5-service</artifactId>
@@ -41,6 +41,7 @@
                                     <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                 </manifest>
                                 <manifestEntries>
+                                    <Add-Opens>java.base/java.lang jdk.management/com.sun.management.internal java.rmi/sun.rmi.transport</Add-Opens>
                                     <SCM-Revision>${buildNumber}</SCM-Revision>
                                     <Implementation-Build>${buildNumber}</Implementation-Build>
                                 </manifestEntries>
